--- a/Assignment4/hw4.css
+++ b/Assignment4/hw4.css
@@ -2,36 +2,24 @@ body {
 	padding: 0;
 	margin: 0;
     background: #777;
-    
 }
 #container {
 	margin: 0;
-	width : 1400px;
-	height: 700px;
-	 background: #efefef;
+	width : 1200px;
+	height: 650px;
+	background: #aaa;
 }
-
-#leftSide {
-	float: left;
-	width: 250px;
-    height: 700px;
-    padding-left: 10px;
-	margin: 0;
-    background: #efefef;
-}
-
 #webglCanvas {
 	float: left;
 	width: 800px;
-    height: 700px;
 	padding: 0;
 }
 #controls {
 	float: left;
-	width: 275px;
-	height: 700px;
+	width: 380px;
+	height: 650px;
 	margin-left: 20px;
-	 background: #efefef;
+	background: #aaa;
 }
 p {
 	padding: 5px;
@@ -53,10 +41,6 @@ h1 {
 h3 {
 margin : 0px 0 5px 0;
 }
-h3.blue { 
- background-color: rgb(0,149,239);
- color: #fff;
- }
 h3.secondary {
 margin-top: 10px;
 }
@@ -71,11 +55,10 @@ margin-top: 10px;
 }
 
 #objbox {
-    font-size: 80%;
 	border-radius: 15px;
 	border: 2px solid #999;
 	padding: 10px;
-	width: 250px;
+	width: 275px;
     background: #eee;
    
 }
@@ -83,8 +66,8 @@ margin-top: 10px;
 	border-radius: 15px;
 	border: 2px solid #999;
 	padding: 10px;
-	width: 250px;
-    margin-bottom: 15px;
+	width: 275px;
+	height: 120px;
       background: #eee;
 }
 
@@ -118,7 +101,6 @@ margin-top: 10px;
 
 .lightbtn {
   padding:5px;
-  width:100px;
   background-color: rgb(0,149,239);
   border: 1px solid #666;
   color:#fff;
@@ -127,9 +109,7 @@ margin-top: 10px;
 
 #transX, #transY, #transZ, 
 #rotX, #rotY, #rotZ,
-#scaleX, #scaleY, #scaleZ ,
-#lightX, #lightY, #lightZ, #lightATT
-
+#scaleX, #scaleY, #scaleZ 
 {
   width: 160px;
   position: relative;
@@ -148,11 +128,7 @@ margin-top: 10px;
  #rotZ .ui-slider-handle,
  #scaleX .ui-slider-handle,
  #scaleY .ui-slider-handle,
- #scaleZ .ui-slider-handle,
- #lightX .ui-slider-handle,
- #lightY .ui-slider-handle,
- #lightZ .ui-slider-handle,
- #lightATT .ui-slider-handle
+ #scaleZ .ui-slider-handle
  {
   position: absolute;
   margin: -3px 0 0 -7px;
@@ -183,11 +159,7 @@ margin-top: 10px;
 #scaleY   .ui-slider-handle:hover,
 #scaleY  .ui-slider-handle:focus,
 #scaleZ  .ui-slider-handle:hover,
-#scaleZ  .ui-slider-handle:focus,
-#lightX.ui-slider-handle:focus,
-#lightY .ui-slider-handle:focus,
-#lightZ .ui-slider-handle:focus,
-#lightATT .ui-slider-handle:focus,
+#scaleZ  .ui-slider-handle:focus
 {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -294,71 +266,11 @@ margin-top: 10px;
   margin-top: -5px;
 }
 
-
-#lightX  #lightXVal {
-  position: absolute;
-  font-size: 13px;
-  font-weight: bold;
-  color:  #292c2f;
-  width: 160px;
-  text-align: center;
-  margin-left: 120px;
-  margin-top: -5px;
-}
-
-#lightY  #lightYVal {
-  position: absolute;
-  font-size: 13px;
-  font-weight: bold;
-  color: ##292c2f;
-  width: 160px;
-  text-align: center;
-  margin-left: 120px;
-  margin-top: -5px;
-}
-
-#lightZ #lightZVal {
-  position: absolute;
-  font-size: 13px;
-  font-weight: bold;
-  color: #292c2f;
-  width: 160px;
-  text-align: center;
-  margin-left: 120px;
-  margin-top: -5px;
-}
-
-#lightATT #lightATTVal {
-  position: absolute;
-  font-size: 13px;
-  font-weight: bold;
-  color: #292c2f;
-  width: 160px;
-  text-align: center;
-  margin-left: 120px;
-  margin-top: -5px;
-}
-
 #panel{
  background: #eee;
 }
 #mySelect { margin-left:175px; }
 
-#infoPanel{
- width: 400px;
- display:none;
-}
-
 .clabel { 
-position: absolute;
 margin-left:  -20px;
-margin-top: -8px;
  }
- 
-
-#leftSide    .ui-spinner {
-    font-size: 80%;
-    width: 55px;
-    }
-#transforms { border: 1px; }
-fieldset { border: 1px }
