--- a/Assignment5/demo.css
+++ b/Assignment5/demo.css
@@ -1,12 +1,16 @@
 body {
-    background-color: #999;
     -webkit-user-select: none; 
     -moz-user-select: none;    
     -ms-user-select: none;     
     -o-user-select: none;    
     user-select: none;
+    padding: 0;
+	margin: 0;
+    background: #777;
 }
-
+#content {
+    width: 900px;
+    }
 #content > h3 {
     margin-left: 70px;
     margin-top: 5px;
@@ -26,10 +30,12 @@ canvas {
 
 #tools {
     float:left;
+    width: 250px;
     background-color:#efefef;
     border: 1px solid black;
     margin: 0pt;
-    padding: 8px
+    padding: 8px;
+    
 }
 
 #tools h3 {
@@ -45,5 +51,9 @@ select {
 font-weight: bold;
 color: #fff;
  background:  rgb(0,149,239);
+ }
+ .notes {
+color: #222;
+ background: #ccc;
  }
  
