--- a/Assignment5/demo.css
+++ b/Assignment5/demo.css
@@ -53,7 +53,7 @@ color: #fff;
  background:  rgb(0,149,239);
  }
  .notes {
-color: #222;
- background: #ccc;
+color: #000;
+ background: #f7f8f9;
  }
  
