--- a/web-design-project/css/style.css
+++ b/web-design-project/css/style.css
@@ -7,6 +7,8 @@
 
 	body {
       font-family:'Montserrat',sans-serif;
+      font-family: Verdana, Arial,sans-serif;
+      font-family: "Trebuchet MS", Helvetica, sans-serif
 		font-size: 14px;
 		font-weight: 400;
 		line-height: 1.7857;
